--- a/src/app/modules/deck/deck.component.html
+++ b/src/app/modules/deck/deck.component.html
@@ -218,7 +218,7 @@
               <img [ngClass]="{
               'img-popover': !(isMobile$ | async)!,
               'img-popover-mobile': (isMobile$ | async)!
-            }" [src]="'/assets/img/cards/' + errata.id + '.jpg'" [alt]="errata.name" />
+            }" [src]="cdnDomain + '/img/cards/' + errata.id + '.jpg'" [alt]="errata.name" />
             </ng-template>
           </p>
           }
