--- a/src/app/modules/collection/card-modal/card-modal.component.html
+++ b/src/app/modules/collection/card-modal/card-modal.component.html
@@ -37,7 +37,7 @@
     <div class="row mt-3">
       <div class="col-sm-12 col-md-5 pe-3">
         <img #image class="rounded mx-auto d-block img-fluid" [src]="card | cardImage:set"
-          [alt]="card.i18n?.name ?? card.name" (error)="image.src='/assets' + card.image; setImageError = true" />
+          [alt]="card.i18n?.name ?? card.name" (error)="image.src=cdnDomain + card.image; setImageError = true" />
         @if(setImageError) {
         <div class="fw-bold fs-6 text-center text-danger small mb-2">
           {{ 'deck_shared.set_image_not_available' | transloco }}
