--- a/src/app/modules/deck-shared/crypt/crypt.component.html
+++ b/src/app/modules/deck-shared/crypt/crypt.component.html
@@ -3,7 +3,7 @@
 <a class="list-group-item list-group-item-action disable-select" #popover="ngbPopover" [disablePopover]="disablePopover"
   [ngbPopover]="imgPopover" triggers="mouseenter:mouseleave" container="body"
   (click)="disableClickPopover ? popover.close() : popover.open()" [ngStyle]="background && {
-    background: 'url(/assets' + crypt.cropImage + ') scroll',
+    background: 'url('+ cdnDomain + crypt.cropImage + ') scroll',
     'background-repeat': 'no-repeat',
     'background-position': 'right 33%',
     'background-size': '50%'
@@ -13,7 +13,7 @@
         'img-popover': !(isMobile$ | async)!,
         'img-popover-mobile': (isMobile$ | async)!
       }" [src]="overrideImage ? overrideImage : crypt | cardImage:setAbbrev" [alt]="crypt.name"
-      (error)="image.src='/assets' + crypt.image" />
+      (error)="image.src = cdnDomain + crypt.image" />
     <h6 class="text-white">
       @if(cryptSize && card.number > 0){
       <span class="fw-normal">1+</span>&nbsp;<span class="text-info">{{getDrawProbability(1)}}%</span>&nbsp;
