feat: Implement grid layout for Crypt and Library cards
- Added new components for displaying Crypt and Library cards in a grid format.
- Introduced lazy loading for images to enhance performance.
- Updated existing components to support the new grid layout.
- Enhanced user interface with hover effects for draw probability and collection badges.
- Added toggle functionality for switching between list and grid views.
- Improved localization with new translations for grid and list options.
- Included new card back images for Crypt and Library cards.
- Minor fixes and performance improvements across the application.

--- a/src/app/modules/collection/card-modal/card-modal.component.html
+++ b/src/app/modules/collection/card-modal/card-modal.component.html
@@ -36,8 +36,9 @@
     @if(card){
     <div class="row mt-3">
       <div class="col-sm-12 col-md-5 pe-3">
-        <img #image class="rounded mx-auto d-block img-fluid" [src]="card | cardImage:set"
-          [alt]="card.i18n?.name ?? card.name" (error)="image.src=cdnDomain + card.image; setImageError = true" />
+        <img class="rounded mx-auto d-block img-fluid" [lazyLoad]="card | cardImage:set"
+          [errorImage]="cdnDomain + card.image" (onStateChange)="onLazyLoadEvent($event)"
+          [alt]="card.i18n?.name ?? card.name" />
         @if(setImageError) {
         <div class="fw-bold fs-6 text-center text-danger small mb-2">
           {{ 'deck_shared.set_image_not_available' | transloco }}
