--- a/src/app/modules/deck-shared/collection-card-tracker/collection-card-tracker.component.html
+++ b/src/app/modules/deck-shared/collection-card-tracker/collection-card-tracker.component.html
@@ -1,6 +1,6 @@
 @switch (card().collection) {
 @case ('NONE'){
-<i class="bi bi-fs-1_2x bi-info-circle text-muted"></i>
+<i class="bi bi-fs-1_2x bi-info-circle text-secondary"></i>
 }
 @case ('PARTIAL'){
 <i class="bi bi-fs-1_2x bi-exclamation-circle text-danger"></i>
