--- a/src/app/modules/deck-shared/library-card/library-card.component.html
+++ b/src/app/modules/deck-shared/library-card/library-card.component.html
@@ -3,8 +3,9 @@
   <div class="library-card">
     <div class="row">
       <div class="col-sm-12 col-md-5 pe-0 bg-black">
-        <img #image class="rounded mx-auto d-block img-fluid" [src]="card | cardImage:activeSet"
-          [alt]="card?.i18n?.name ?? card.name" (error)="image.src=cdnDomain + card.image; setImageError = true" />
+        <img class="rounded mx-auto d-block img-fluid" [defaultImage]="'/assets/img/cardbacklibrary.jpg'"
+          [lazyLoad]="card | cardImage:activeSet" [errorImage]="cdnDomain + card.image"
+          (onStateChange)="onLazyLoadEvent($event)" [alt]="card?.i18n?.name ?? card.name" />
         @if(setImageError) {
         <div class="text-center text-warning small mb-2">
           {{ 'deck_shared.set_image_not_available' | transloco }}
