feat: Add apply button to modal footers in various components and update translations

--- a/src/app/modules/deck-builder/library-section/library-section.component.html
+++ b/src/app/modules/deck-builder/library-section/library-section.component.html
@@ -111,6 +111,13 @@
     <div class="modal-body">
       <ng-container *ngTemplateOutlet="filter"></ng-container>
     </div>
+    <div class="modal-footer">
+      <div class="d-grid gap-2 w-100">
+        <button type="button" class="btn btn-primary" (click)="modal.dismiss('Apply')">
+          {{ 'shared.apply' | transloco }}
+        </button>
+      </div>
+    </div>
   </ng-template>
 
   <ng-template #filter>
